--- a/css/style.css
+++ b/css/style.css
@@ -25,12 +25,12 @@ body {
     left: 35%;
     transform: translate(-90%, -50%);
     padding: 10px;
-    color: rgb(250, 248, 244);
-    text-shadow: 2px 3px 2px black;
     font-weight: 32px;
     text-align: center;
     text-transform: uppercase;
     font-weight: bold;
+    color: rgb(250, 248, 244);
+    text-shadow: 2px 3px 2px black;
 }
 
 header h1 {
@@ -46,26 +46,26 @@ header h1 {
 
 nav {
     height: 40px;
-    background-color: rgb(226, 221, 216);
-    text-align: center;
     line-height: 24px;
+    text-align: center;
     font-size: 0;
+    background-color: rgb(226, 221, 216);
 }
 
 .nav a, .nav li {
     display: inline-block;
     padding: 5px 30px;
-    color: rgba(136, 175, 74, 0.8);
     list-style: none;
     font-size: 24px;
     text-decoration: none;
     letter-spacing: 1px;
     cursor: pointer;
+    color: black;
     transition: color .3s;
 }
 
 nav a:hover {
-    color: rgb(214, 196, 159);
+    color: rgb(177, 190, 139);
 }
 
 /* MAIN */
@@ -78,7 +78,8 @@ main {
 .main-heading {
     text-align: center;
     text-transform: uppercase;
-    color: rgba(136, 175, 74, 0.8);
+    color: black;
+    text-shadow: 2px 3px 2px rgb(110, 104, 104);
 }
 
 main section {
@@ -132,16 +133,17 @@ main {
     width: 70%;
 }
 
-.recipes-list a, .recipes-list li {
-    margin: 25px auto;
-    font-weight: bold;
-    text-decoration: none;
-    color: black;
-    transition: color .3s;
+.recipes-list img {
+    width: 320px;
+    height: 400px;
+    margin: 25px 0 35px 3px;
+    transition: border .3s, border-radius .3s;
 }
 
-.recipes-list a:hover {
-    color: rgb(102, 80, 93);
+.recipes-list img:hover {
+    border-radius: 50px;
+    border: 5px solid rgba(250, 250, 250, 0.9);
+
 }
 
 .recipes-text {
@@ -153,7 +155,6 @@ main {
 h3 {
     text-align: center;
     margin-bottom: 25px;
-
 }
 
 h4 {
@@ -162,10 +163,10 @@ h4 {
 }
 
 section img {
-    float: right;
-    margin: 20px 0 0 15px;
     width: 320px;
     height: auto;
+    margin: 20px 0 0 15px;
+    float: right;
 }
 
 .omelette {
@@ -182,15 +183,15 @@ section img {
 div input, textarea {
     margin-left: 50%;
     transform: translateX(-50%);
-    background-color: rgb(194, 194, 184);
     cursor: text;
-    border: 1px solid black;
     margin-bottom: 5px;
+    background-color: rgb(194, 194, 184);
+    border: 1px solid black;
     transition: border-color .3s;
 }
 
 div input:hover, textarea:hover {
-    border-color: rgb(188, 190, 183)
+    color: rgb(177, 190, 139);
 }
 
 .contact p {
@@ -202,22 +203,22 @@ div input:hover, textarea:hover {
 
 footer {
     height: 100px;
-    background-color: rgb(226, 221, 216);
-    color: rgba(136, 175, 74, 0.8);
     text-align: center;
+    background-color: rgb(226, 221, 216);
+    color: rgba(11, 12, 11, 0.8);
 }
 
 footer p {
-    font-size: 16px;
+    font-size: 12px;
 }
 
 .footer-icon i {
     margin: 20px 8px;
     padding: 0 5px;
-    font-size: 28px;
+    font-size: 22px;
     transition: color .3s;
 }
 
 .footer-icon i:hover {
-    color: rgb(214, 196, 159);
+    color: rgb(177, 190, 139);
 }
